2010-06-07  Hedayat Vatankhah  <hedayat@grad.com>

	* NEWS: 
	* RELEASE:
	- prepared for 0.2.1 release 
	
	* lib/oxygen/simulationserver/monitorlogger.h: 
	* lib/oxygen/simulationserver/monitorlogger.cpp:
	- request complete game information every 10 seconds so that it'll receive
	  new game state information 

2010-06-06  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/monitorserver/monitorserver.h: 
	* lib/oxygen/monitorserver/monitorserver.cpp (MonitorServer::GetMonitorData):
	- more protection against simultaneous access (by monitor(s) and the logger)  

2010-06-05  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/simulationserver.cpp (SimulationServer::Step): 
	- disabling the usleep call to retain full compatibility with the previous
	  versions
	  
	* RELEASE:
	- release notes for the next version (0.2.1)
	 
	* CMakeLists.txt: 
	- bumped library versions and package version for the next release

2010-05-09  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp (thisCall): 
	- Fixed a bug in number to pointer conversion in 64bit systems

2010-03-28  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/monitorserver/monitorserver.h (MonitorServer): 
	* lib/oxygen/monitorserver/monitorserver.cpp (MonitorServer::GetMonitorData):
	- protect GetMonitorData() on simultaneous access
	 
	* lib/oxygen/physicsserver/int/sliderjointint.h: 
	* lib/oxygen/physicsserver/int/jointint.h: 
	* lib/oxygen/physicsserver/int/physicsobjectint.h:
	- fixed the shared_ptr.hpp include path
	 
	* plugin/odeimps/odejoint.cpp (JointImp::EnableFeedback):
	- removed extra cin/cout commands 

2010-02-28  Marian Buchta  <marian.buchta@gmail.com>

    * lib/kerosin/fontserver/fontserver.cpp:
    * lib/kerosin/imageserver/imageserver.cpp:
    * lib/kerosin/imageserver/imageserver.h:
    * lib/kerosin/inputserver/inputcontrol.cpp:
    * lib/kerosin/inputserver/inputserver.cpp:
    * lib/kerosin/materialserver/material2dtexture.cpp: