@@ -10,7 +10,8 @@ add_library(accelerometer MODULE ${accelerometer_LIB_SRCS})
 
 target_link_libraries(accelerometer ${spark_libs} ${Boost_LIBRARIES})
 
-set_target_properties(accelerometer PROPERTIES VERSION 0.0.0 SOVERSION 0)
 if (NOT APPLE)
-   install(TARGETS accelerometer DESTINATION ${LIBDIR}/${CMAKE_PROJECT_NAME})
+    set_target_properties(accelerometer PROPERTIES VERSION 0.0.0 SOVERSION 0)
 endif (NOT APPLE)
+
+install(TARGETS accelerometer DESTINATION ${LIBDIR}/${CMAKE_PROJECT_NAME})
